Final Push almost done

--- a/.env
+++ b/.env
@@ -24,10 +24,10 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=deepak.pradhan048@gmail.com
-MAIL_PASSWORD=9845662948
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=1a27f32f9f44e3
+MAIL_PASSWORD=9dc22f0fb5c872
 MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
